# Franka_Arm

./: .gitignore  README.md  run franka 7dof
franka_dual_3dof_bringup/: package.xml  setup.py
franka_dual_3dof_bringup/config/: clone_arm3.yaml  clone_controllers.yaml  clone_hold.yaml  follower_arm3.yaml  leader2_arm3.yaml  leader2_controllers.yaml  leader2_hold.yaml  leader_arm3.yaml  leader_hold.yaml
franka_dual_3dof_bringup/launch/: clone_fr3_3dof.launch.py  dual_visual.launch.py  triple_fr3_3dof.launch.py
franka_follower_3dof/: package.xml  setup.cfg  setup.py
franka_follower_3dof/config/: follower_hold.yaml  follower_j345_effort_traj.yaml  follower_j345_position.yaml  follower_j345_reset.yaml  franka_follower_controllers.yaml
franka_follower_3dof/franka_follower_3dof/: fr3_j345_exact_lqr.py
franka_follower_3dof/launch/: gz_fr3_dual_ioc_torque_3dof.launch.py  gz_fr3_dual_visual.launch.py  gz_fr3_ioc_torque_3dof.launch.py
franka_follower_3dof/scripts/: fr3_j345_exact_lqr.py
franka_follower_3dof/urdf/: fr3_3dof.urdf.xacro  franka_robot_3dof.xacro
franka_leader_3dof/: package.xml  setup.cfg  setup.py
franka_leader_3dof/config/: follower_hold.yaml  franka_follower_standing_controllers.yaml  franka_leader_controllers.yaml
franka_leader_3dof/franka_leader_3dof/: fr3_j345_exact_lqr.py
franka_leader_3dof/launch/: gz_fr3_dual_ioc_torque_3dof.launch.py  gz_fr3_dual_standing_3dof.launch.py  gz_fr3_dual_visual.launch.py  gz_fr3_ioc_torque_3dof.launch.py  gz_fr3_leader_only_torque_3dof.launch.py
franka_leader_3dof/urdf/: fr3_3dof.urdf.xacro  franka_arm_3dof.ros2_control.xacro  franka_robot_3dof.xacro
iocfranka_3dof/: package.xml  setup.cfg  setup.py
iocfranka_3dof/config/: follower_arm3.yaml  iocfranka_3dof_controllers.yaml  iocfranka_follower_controllers.yaml  iocfranka_leader_controllers.yaml  leader_arm3.yaml  (+1 more)
(+21 files in other folders)
